--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
       <artifactId>elasticsearch</artifactId>
       <version>1.2.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>elasticsearch</finalName>
